add step list to Kruskal algorithm
