# API/main.py
@@ -1,6 +1,6 @@
 from flask import Flask, request, jsonify
 from flask_swagger_ui import get_swaggerui_blueprint
-from models.graph import BFSGraph, DFSGraph
+from models.graph import BFSGraph, DFSGraph, KruskalGraph
 
 
 app = Flask(__name__, template_folder='swagger/templates')
@@ -36,6 +36,16 @@ def DFS():
     current_vertex = request_data['start_vertex']
     graph = DFSGraph(vertices, adjacency_list, current_vertex)
     return jsonify(graph.search())
+
+
+@app.route("/api/Kruskal", methods=['POST'])
+def Kruskal():
+    request_data = request.get_json(force=True)
+    vertices = request_data['vertices']
+    adjacency_list = request_data['adjacency_list']
+    weights = request_data['weights']
+    graph = KruskalGraph(vertices, adjacency_list, weights)
+    return jsonify(graph.find_minimum_spinning_tree())
 
 
 if __name__ == '__main__':
