# API/static/swagger.json
@@ -206,6 +206,179 @@
             }
           }
         }
+    },
+    "/api/Kruskal": {
+      "post": {
+        "tags": [
+          "Minimum Spanning Tree Algorithm"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "Kruskal",
+            "required": true,
+            "description": "Returns a step list of Kruskal algorithm",
+            "schema": {
+              "$ref": "#/components/schemas/newtork_Kruskal_input"
+            },
+            "examples": {
+              "graph": {
+                "value": {
+                  "start_vertex": 0,
+                  "vertices": [
+                    0, 1, 2, 3, 4, 5, 6, 7, 8
+                  ],
+                  "adjacency_list": [
+                    [
+                        1, 2, 3, 7
+                    ],
+                    [
+                        0, 7
+                    ],
+                    [
+                        0, 4, 8
+                    ],
+                    [
+                        0, 4, 5, 6
+                    ],
+                    [
+                        2, 3, 8
+                    ],
+                    [
+                        3, 6, 7
+                    ],
+                    [
+                        3, 5, 8
+                    ],
+                    [
+                        0, 1, 5
+                    ],
+                    [
+                        2, 4, 6
+                    ]
+                  ],
+                  "weights": [
+                    [
+                        2, 5, 1, 3
+                    ],
+                    [
+                        2, 8
+                    ],
+                    [
+                        5, 2, 2
+                    ],
+                    [
+                        1, 4, 1, 5
+                    ],
+                    [
+                        2, 4, 4
+                    ],
+                    [
+                        1, 3, 2
+                    ],
+                    [
+                        5, 3, 7
+                    ],
+                    [
+                        3, 8, 2
+                    ],
+                    [
+                        2, 4, 7
+                    ]
+                  ]
+                }
+              }
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/graph_input"
+              },
+              "examples": {
+                "graph": {
+                  "value": {
+                    "start_vertex": 0,
+                    "vertices": [
+                      0, 1, 2, 3, 4, 5, 6, 7, 8
+                    ],
+                    "adjacency_list": [
+                      [
+                          1, 2, 3, 7
+                      ],
+                      [
+                          0, 7
+                      ],
+                      [
+                          0, 4, 8
+                      ],
+                      [
+                          0, 4, 5, 6
+                      ],
+                      [
+                          2, 3, 8
+                      ],
+                      [
+                          3, 6, 7
+                      ],
+                      [
+                          3, 5, 8
+                      ],
+                      [
+                          0, 1, 5
+                      ],
+                      [
+                          2, 4, 6
+                      ]
+                    ],
+                    "weights": [
+                      [
+                          2, 5, 1, 3
+                      ],
+                      [
+                          2, 8
+                      ],
+                      [
+                          5, 2, 2
+                      ],
+                      [
+                          1, 4, 1, 5
+                      ],
+                      [
+                          2, 4, 4
+                      ],
+                      [
+                          1, 3, 2
+                      ],
+                      [
+                          5, 3, 7
+                      ],
+                      [
+                          3, 8, 2
+                      ],
+                      [
+                          2, 4, 7
+                      ]
+                    ]
+                  }
+                }
+              }
+            }
+          }
+        },
+        "summary": "Returns a step list of BFS",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/components/schemas/BFS_output"
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -213,6 +386,16 @@
       "vertex": {
         "type": "integer",
         "format": "int32"
+      },
+      "weight": {
+        "type": "number",
+        "format": "float"
+      },
+      "weights": {
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/weight"
+        }
       },
       "neighbours": {
         "type": "array",
@@ -237,6 +420,29 @@
           },
           "start_vertex": {
             "$ref": "#/components/schemas/vertex"
+          }
+        }
+      },
+      "newtork_Kruskal_input": {
+        "type": "object",
+        "properties": {
+          "vertices": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/vertex"
+            }
+          },
+          "adjacency_list": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/neighbours"
+            }
+          },
+          "weights": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/weights"
+            }
           }
         }
       },
